--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,7 +3,7 @@ spring.application.name=VaccineManagement
 #spring.datasource.url=jdbc:mysql://localhost:3306/vaccinemanagement?createTableIfNotExist=true
 #sprint.datasource.username=root
 #spring.datasource.password=Vishrut@123
-#spring.jpa.hibernate.ddl-auto=create
+#spring.jpa.hibernate.ddl-auto=update
 
 #the above code was not working so i write this one
 spring.datasource.url=jdbc:mysql://localhost:3306/vaccinemanagement?createTableIfNotExist=true
@@ -14,4 +14,4 @@ spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQLDialect
 jakarta.persistence.jdbc.url=jdbc:mysql://localhost:3306/vaccinemanagement
 spring.jpa.hibernate.ddl-auto=update
-#spring.jpa.hibernate.ddl-auto=create
+##spring.jpa.hibernate.ddl-auto=create
